# nitroluks

./: .clang-format  .clang-tidy  meson.build
debian/: control
include/: NitroKey.h  PinInput.h  constants.h  exceptions.h
src/: NitroKey.cpp  PinInput.cpp  exceptions.cpp  nitro_luks.cpp
test/: test_nitrokey.cpp
